# wistfare-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/wistfare/: __init__.py  client.py  context.py  decorators.py  image.py
src/wistfare/cli/: main.py
src/wistfare/runner/: server.py
tests/: test_decorators.py  test_runner.py
