[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "wistfare"
version = "0.1.0"
description = "Wistfare Serverless GPU Platform SDK"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "click>=8.0",
]

[project.scripts]
wistfare = "wistfare.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
